working on site

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <title> Dear Scholars </title>
-</head>
-<body>
-  <h1> Under Construction </h1>
-  <p> This website is under construction. Come back soon! </p>
-</body>
-</html>
+---
+layout: default
+---
+
+<h1> HOME </h1>
+<p> This website is under construction, come back soon! </p>
