updated TED talks

--- a/ted_talks.html
+++ b/ted_talks.html
@@ -4,20 +4,112 @@ layout: default
 
 <h1> Favorite TED Talks </h1>
 
-<h2> David Blaine, "How I Held My Breath for 17 Minutes" </h2>
+<section>
+<h2> How I Held My Breath for 17 Minutes </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/XFnGhrC_3Gs" frameborder="0" allowfullscreen></iframe>
+<figcaption>David Blaine, "How I Held My Breath for 17 Minutes".</figcaption>
+</figure>
+<p>
+  In this highly personal talk from TEDMED, magician and stuntman David Blaine describes what it took to hold his breath underwater for 17 minutes&mdash;a world record (only two minutes shorter than this entire talk!)&mdash;and what his often death-defying work means to him.
+  Warning: do NOT try this at home.
+</p>
+</section>
 
-<h2> Simon Sinek, "How Great Leaders Inspire Action" </h2>
+<section>
+<h2> How Great Leaders Inspire Action </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/qp0HIF3SfI4" frameborder="0" allowfullscreen></iframe>
+<figcaption>Simon Sinek, "How Great Leaders Inspire Action".</figcaption>
+</figure>
+<p>
+  Simon Sinek presents a simple but powerful model for how leaders inspire action, starting with a golden circle and the question "Why?"
+  His examples include Apple, Martin Luther King, and the Wright brothers&mdash;and as a counterpoint Tivo, which (until a recent court victory that tripled its stock price) appeared to be struggling.
+</p>
+</section>
 
-<h2> Jay Bradner, "Open Source Cancer Medicines" </h2>
+<section>
+<h2> Open Source Cancer Medicines </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/wOiKRVH0nQ8" frameborder="0" allowfullscreen></iframe>
+<figcaption>Jay Bradner, "Open Source Cancer Medicines". </figcaption>
+</figure>
+<p>
+  How does cancer know it's cancer?
+  At Jay Bradner's lab, they found a molecule that might hold the answer, JQ1&mdash;and instead of patenting JQ1, they published their findings and mailed samples to 40 other labs to work on.
+  An inspiring look at the open-source future of medical research.
+</p>
+</section>
 
-<h2> William Kamkwamba, "How I Harnessed the Wind" </h2>
+<section>
+<h2> How I Harnessed the Wind </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/crjU5hu2fag" frameborder="0" allowfullscreen></iframe>
+<figcaption>William Kamwamba, "How I Harnessed the Wind".</figcaption>
+</figure>
+<p>
+  At age 14, in poverty and famine, a Malawian boy built a windmill to power his family's home.
+  Now at 22, William Kamkwamba, who speaks at TED, here, for the second time, shares in his own words the moving tale of invention that changed his life.
+</p>
+</section>
 
-<h2> Chimamanda Ngozi Adichie, "The Danger of a Single Story" </h2>
+<section>
+<h2> The Danger of a Single Story </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/D9Ihs241zeg" frameborder="0" allowfullscreen></iframe>
+<figcaption>Chimamanda Ngozi Adichie, "The Danger of a Single Story". </figcaption>
+</figure>
+<p>
+  Our lives, our cultures, are composed of many overlapping stories.
+  Novelist Chimamanda Adichie tells the story of how she found her authentic cultural voice&mdash;and warns that if we hear only a single story about another person or country, we risk a critical misunderstanding.
+</p>
+</section>
 
-<h2> Andrew Youn, "Title" </h2>
+<section>
+<h2> 3 Reasons Why We Can Win the Fight Against Poverty </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/qyY6KHygh2U" frameborder="0" allowfullscreen></iframe>
+<figcaption> Andrew Youn, "3 Reasons Why We Can Win the Fight Against Poverty". </figcaption>
+</figure>
+<p>
+  Half of the world's poorest people have something in common: they're small farmers.
+  In this eye-opening talk, activist Andrew Youn shows how his group, One Acre Fund, is helping these farmers lift themselves out of poverty by delivering to them life-sustaining farm services that are already in use all over the world.
+  Enter this talk believing we'll never be able to solve hunger and extreme poverty, and leave it with a new understanding of the scale of the world's biggest problems.
+</p>
+</section>
 
-<h2> Brene Brown, "The Power of Vulnerability" </h2>
+<section>
+<h2> The Power of Vulnerability </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/iCvmsMzlF7o" frameborder="0" allowfullscreen></iframe>
+<figcaption> Brene Brown, "The Power of Vulnerability" </figcaption>
+</figure>
+<p>
+  Brene Brown studies human connection&mdash;our ability to empathize, belong, love.
+  In a poignant, funny talk at TEDxHouston, she shares a deep insight from her research, one that sent her on a personal quest to know herself as well as to understand humanity.
+  A talk to share.
+</p>
+</section>
 
-<h2> Ken Robinson, "Do Schools Kill Creativity?" </h2>
+<section>
+<h2> Do Schools Kill Creativity? </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/iG9CE55wbtY" frameborder="0" allowfullscreen></iframe>
+<figcaption>Ken Robinson, "Do Schools Kill Creativity?" </figcaption>
+</figure>
+<p>
+  Sir Ken Robinson makes an entertaining and profoundly moving case for creating an education system that nurtures (rather than undermines) creativity.
+</p>
+</section>
 
-<h2> Bryan Stevenson, "We Need to Talk about Injustice" </h2>
+<section>
+<h2> We Need to Talk about Injustice </h2>
+<figure>
+<iframe width="426" height="240" src="https://www.youtube.com/embed/c2tOp7OxyQ8" frameborder="0" allowfullscreen></iframe>
+<figcaption> Bryan Stevenson, "We Need to Talk about Injustice" </figcaption>
+</figure>
+<p>
+  In an engaging and personal talk&mdash;with cameo appearances from his grandmother and Rosa Parks&mdash;human rights lawyer Bryan Stevenson shares some hard truths about America's justice system, starting with a massive imbalance along racial lines: a third of the country's black male population has been incarcerated at some point in their lives.
+  These issues, which are wrapped up in America's unexamined history, are rarely talked about with this level of candor, insight and persuasiveness.
+</p>
+</section>
