working on books and websites section

--- a/books.html
+++ b/books.html
@@ -4,11 +4,81 @@ layout: default
 
 <h1> Great Books </h1>
 
-<ul>
-  <li> The Last Lecture </li>
-  <li> How to Win Friends and Influence People </li>
-  <li> Mountains Beyond Mountains </li>
-  <li> Warriors Don't Cry </li>
-  <li> Americanah </li>
-  <li> And There Was Light </li>
-</ul>
+<section>
+<h2> The Last Lecture </h2>
+<figure>
+<img src="img/book_TheLastLecture.jpg" />
+<figcaption> Randy Pausch, "The Last Lecture" </figcaption>
+</figure>
+<p>
+A lot of professors give talks titled "The Last Lecture." Professors are asked to consider their demise and to ruminate on what matters most to them. And while they speak, audiences can't help but mull the same question: What wisdom would we impart to the world if we knew it was our last chance? If we had to vanish tomorrow, what would we want as our legacy?
+</p>
+<p>
+When Randy Pausch, a computer science professor at Carnegie Mellon, was asked to give such a lecture, he didn't have to imagine it as his last, since he had recently been diagnosed with terminal cancer. But the lecture he gave--"Really Achieving Your Childhood Dreams"--wasn't about dying. It was about the importance of overcoming obstacles, of enabling the dreams of others, of seizing every moment (because "time is all you have...and you may find one day that you have less than you think"). It was a summation of everything Randy had come to believe. It was about living. (From <cite><a href="http://www.cmu.edu/randyslecture/book/">CMU</a></cite>.) </p>
+<figure>
+<iframe width="854" height="480" src="https://www.youtube.com/embed/ji5_MqicxSo" frameborder="0" allowfullscreen></iframe>
+<figcaption>Randy Pausch, "Really Achieving Your Childhood Dreams"</figcaption>
+</figure>
+</section>
+
+<section>
+<h2> How to Win Friends and Influence People </h2>
+<figure>
+<img src="img/book_HowToWinFriendsAndInfluencePeople.jpg" />
+<figcaption>Dale Carnegie, "How to Win Friends and Influence People"</figcaption>
+</figure>
+<p>
+You can go after the job you want...and get it! You can take the job you have...and improve it! You can take any situation you're in...and make it work for you!
+</p>
+<p>
+Since its release in 1936, How to Win Friends and Influence People has sold more than 15 million copies. Dale Carnegie’s first book is a timeless bestseller, packed with rock-solid advice that has carried thousands of now famous people up the ladder of success in their business and personal lives.
+</p><p>
+As relevant as ever before, Dale Carnegie’s principles endure, and will help you achieve your maximum potential in the complex and competitive modern age. (From <cite><a href="http://books.simonandschuster.com/How-To-Win-Friends-and-Influence-People/Dale-Carnegie/9781439167342">Simon &amp; Schuster</a></cite>.)
+</p>
+</section>
+
+<section>
+<h2> Mountains Beyond Mountains </h2>
+<figure>
+<img src="img/book_MountainsBeyondMountains.jpg" />
+<figcaption> Tracy Kidder, "Mountains Beyond Mountains: The Quest of Dr. Paul Farmer, a Man Who Would Cure the World" </figcaption>
+</figure>
+<p>
+At the center of Mountains Beyond Mountains stands Paul Farmer. Doctor, Harvard professor, renowned infectious-disease specialist, anthropologist, the recipient of a MacArthur “genius” grant, world-class Robin Hood, Farmer was brought up in a bus and on a boat, and in medical school found his life’s calling: to diagnose and cure infectious diseases and to bring the lifesaving tools of modern medicine to those who need them most. This magnificent book shows how radical change can be fostered in situations that seem insurmountable, and it also shows how a meaningful life can be created, as Farmer—brilliant, charismatic, charming, both a leader in international health and a doctor who finds time to make house calls in Boston and the mountains of Haiti—blasts through convention to get results. 
+</p>
+<p>
+Mountains Beyond Mountains takes us from Harvard to Haiti, Peru, Cuba, and Russia as Farmer changes minds and practices through his dedication to the philosophy that "the only real nation is humanity" - a philosophy that is embodied in the small public charity he founded, Partners In Health. He enlists the help of the Gates Foundation, George Soros, the U.N.’s World Health Organization, and others in his quest to cure the world. At the heart of this book is the example of a life based on hope, and on an understanding of the truth of the Haitian proverb “Beyond mountains there are mountains”: as you solve one problem, another problem presents itself, and so you go on and try to solve that one too. (From <cite><a href="https://www.amazon.com/Mountains-Beyond-Quest-Farmer-Would/dp/0812973011">Amazon</a></cite>.)
+</p>
+</section>
+<section>
+<h2> Warriors Don't Cry </h2>
+<figure>
+<img src="img/book_WarriorsDontCry.jpg" />
+<figcaption> Melba Patillo, "Warriors Don't Cry: A Searing Memoir of the Battle to Integrate Little Rock's Central High" </figcaption>
+</figure>
+<p>
+In 1957, Melba Pattillo turned sixteen. That was also the year she became a warrior on the front lines of a civil rights firestorm. Following the landmark 1954 Supreme Court ruling, Brown v. Board of Education, Melba was one of nine teenagers chosen to integrate Little Rock's Central High School. 
+</p><p>
+Throughout her harrowing ordeal, Melba was taunted by her schoolmates and their parents, threatened by a lynch mob's rope, attacked with lighted sticks of dynamite, and injured by acid sprayed in her eyes. But through it all, she acted with dignity and courage, and refused to back down. (From <cite><a href="https://www.amazon.com/Warriors-Dont-Cry-Searing-Integrate/dp/1416948821">Amazon</a></cite>.)
+</p>
+</section>
+<section>
+<h2> Americanah </h2>
+<figure>
+<img src="img/book_Americanah.jpg" />
+<figcaption> Chimamanda Ngozi Adichie, "Americanah" </figcaption>
+</figure>
+<p>
+Ifemelu and Obinze are young and in love when they depart military-ruled Nigeria for the West. Beautiful, self-assured Ifemelu heads for America, where despite her academic success, she is forced to grapple with what it means to be black for the first time. Quiet, thoughtful Obinze had hoped to join her, but with post-9/11 America closed to him, he instead plunges into a dangerous, undocumented life in London. Fifteen years later, they reunite in a newly democratic Nigeria, and reignite their passion—for each other and for their homeland. (From <cite><a href="https://www.amazon.com/Americanah-Chimamanda-Ngozi-Adichie/dp/0307455920">Amazon</a></cite>.)
+</p>
+</section>
+<section>
+<h2> And There Was Light </h2>
+<figure>
+<img src="img/book_AndThereWasLight.jpg" />
+<figcaption> Jacques Lusseyran, "And There Was Light: The Extraordinary Memoir of a Blind Hero of the French Resistance in World War II" </figcaption>
+</figure>
+<p>
+When Jacques Lusseyran was an eight-year-old Parisian schoolboy, he was blinded in an accident. He finished his schooling determined to participate in the world around him. In 1941, when he was seventeen, that world was Nazi-occupied France. Lusseyran formed a resistance group with fifty-two boys and used his heightened senses to recruit the best. Eventually, Lusseyran was arrested and sent to the Buchenwald concentration camp in a transport of two thousand resistance fighters. He was one of only thirty from the transport to survive. His gripping story is one of the most powerful and insightful descriptions of living and thriving with blindness, or indeed any challenge, ever published. (From <cite><a href="https://www.amazon.com/There-Was-Light-Extraordinary-Resistance/dp/1608682692">Amazon</a></cite>.)
+</p>
+</section>
