--- a/websites.html
+++ b/websites.html
@@ -4,16 +4,78 @@ layout: default
 
 <h1> Great Websites for Students </h1>
 
-<ul>
-  <li> Simple English Wikipedia </li>
-  <li> www.voanews.com </li>
-  <li> www.dictionary.com </li>
-  <li> news.google.com </li>
-  <li> English Wikipedia </li>
-  <li> www.time.com </li>
-  <li> www.npr.org (many radio pieces with text transcripts) </li>
-  <li> www.nytimes.com </li>
-  <li> www.newyorker.com </li>
-  <li> www.hbr.org </li>
-  <li> www.gladwell.com </li>
-</ul>
+<section>
+<h2> Simple English Wikipedia </h2>
+<figure>
+<img src="img/website_SimpleEnglishWikipedia.png" />
+</figure>
+<section>
+
+<section>
+<h2> Voice of America </h2>
+<figure>
+<img src="img/website_VoiceOfAmerica.png" />
+</figure>
+</section>
+
+<section>
+<h2> Dictionary.com </h2>
+<figure>
+<img src="img/website_DictionaryDotCom.png" />
+</figure>
+</section>
+
+<section>
+<h2> Google News </h2>
+<figure>
+<img src="img/website_GoogleNews.png" />
+</figure>
+</section>
+
+<section>
+<h2> English Wikipedia </h2>
+<figure>
+<img src="img/website_EnglishWikipedia.png" />
+</figure>
+</section>
+
+<section>
+<h2> Time </h2>
+<figure>
+<img src="img/website_Time.png" />
+</figure>
+</section>
+<section>
+<h2> National Public Radio (NPR) </h2>
+<figure>
+<img src="img/website_NationalPublicRadio.png" />
+</figure>
+</section>
+
+<section>
+<h2> The New York Times </h2>
+<figure>
+<img src="img/website_TheNewYorkTimes.jpg" />
+</figure>
+</section>
+
+<section>
+<h2> The New Yorker </h2>
+<figure>
+<img src="img/website_TheNewYorker.jpg" />
+</figure>
+</section>
+
+<section>
+<h2> Harvard Business Review </h2>
+<figure>
+<img src="img/website_HarvardBusinessReview.png" />
+</figure>
+</section>
+
+<section>
+<h2> Malcom Gladwell </h2>
+<figure>
+<img src="img/website_MalcolmGladwell.jpg" />
+</figure>
+</section>
