--- a/websites.html
+++ b/websites.html
@@ -7,75 +7,137 @@ layout: default
 <section>
 <h2> Simple English Wikipedia </h2>
 <figure>
-<img src="img/website_SimpleEnglishWikipedia.png" />
+  <a href="https://simple.wikipedia.org/">https://simple.wikipedia.org/</a>
 </figure>
+<p>
+This is the front page of the Simple English Wikipedia. Wikipedias are places where people work together to write encyclopedias in different languages. We use Simple English words and grammar here. The Simple English Wikipedia is for everyone! That includes children and adults who are learning English. (From <cite><a href="https://simple.wikipedia.org/wiki/Main_Page">Wikipedia</a></cite>.)
+</p>
 <section>
 
 <section>
 <h2> Voice of America </h2>
 <figure>
-<img src="img/website_VoiceOfAmerica.png" />
+  <a href="www.voanews.com/">www.voanews.com/</a>
 </figure>
+<p>
+Voice of America (VOA) is a United States government-funded multimedia news source and the official external broadcasting institution of the United States.[1] VOA provides programming for broadcast on radio, TV, and the Internet outside of the U.S., in English and some foreign languages. (From <cite><a href="https://en.wikipedia.org/wiki/Voice_of_America">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> Dictionary.com </h2>
 <figure>
-<img src="img/website_DictionaryDotCom.png" />
+  <a href="http://www.dictionary.com/">http://www.dictionary.com/</a>
 </figure>
+<p>
+Dictionary.com is the world's leading digital dictionary. We provide millions of English definitions, spellings, audio pronunciations, example sentences, and word origins. Dictionary.com’s main, proprietary source is the Random House Unabridged Dictionary, which is continually updated by our team of experienced lexicographers and supplemented with trusted, established sources including American Heritage and Harper Collins to support a range of language needs. Dictionary.com also offers a translation service, a Word of the Day, a crossword solver, and a wealth of editorial content that benefit the advanced word lover and the English language student alike. (From <cite><a href="http://content.dictionary.com/">Dictionary.com</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> Google News </h2>
 <figure>
-<img src="img/website_GoogleNews.png" />
+  <a href="https://news.google.com/">https://news.google.com/</a>
 </figure>
+<p>
+Google News is a free news aggregator provided and operated by Google, selecting up-to-date news from thousands of publications.
+Google News watches more than 4500 news sources worldwide.
+The service covers news articles appearing within the past 30 days on various news websites.
+(From <cite><a href="https://en.wikipedia.org/wiki/Google_News">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> English Wikipedia </h2>
 <figure>
-<img src="img/website_EnglishWikipedia.png" />
+  <a href="https://en.wikipedia.org/">https://en.wikipedia.org/</a>
 </figure>
+<p>
+Wikipedia, owned by the nonprofit organization Wikimedia Foundation, is a free Internet encyclopedia that allows its users to edit almost any article accessible. Wikipedia is the largest and most popular general reference work on the Internet and is ranked among the ten most popular websites. (From <cite><a href="https://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> Time </h2>
 <figure>
-<img src="img/website_Time.png" />
+  <a href="http://time.com/">http://time.com/</a>
 </figure>
+<p>
+Time is an American weekly news magazine published in New York City. It was founded in 1923 and for decades was dominated by Henry Luce, who built a highly profitable stable of magazines.
+A European edition (Time Europe, formerly known as Time Atlantic) is published in London and also covers the Middle East, Africa and, since 2003, Latin America. An Asian edition (Time Asia) is based in Hong Kong. The South Pacific edition, which covers Australia, New Zealand and the Pacific Islands, is based in Sydney, Australia. In December 2008, Time discontinued publishing a Canadian advertiser edition.
+Time has the world's largest circulation for a weekly news magazine, and has a readership of 26 million, 20 million of which are based in the United States. (From <cite><a href="https://en.wikipedia.org/wiki/Time_(magazine)">Wikipedia</a></cite>)
+</p>
 </section>
+
 <section>
 <h2> National Public Radio (NPR) </h2>
 <figure>
-<img src="img/website_NationalPublicRadio.png" />
+  <a href="http://www.npr.org/">http://www.npr.org/</a>
 </figure>
+<p>
+ational Public Radio (NPR) is an American privately and publicly funded non-profit membership media organization that serves as a national syndicator to a network of 900 public radio stations in the United States of America.
+NPR produces and distributes news and cultural programming. Individual public radio stations are not required to broadcast all NPR programs that are produced. Most public radio stations broadcast a mixture of NPR programs, content from rival providers American Public Media, Public Radio International and Public Radio Exchange, and locally produced programs. NPR's flagships are two drive time news broadcasts, Morning Edition and the afternoon All Things Considered; both are carried by most NPR member stations, and are two of the most popular radio programs in the country.
+NPR manages the Public Radio Satellite System, which distributes NPR programs and other programming from independent producers and networks such as American Public Media and Public Radio International. Its content is also available on-demand via the web, mobile, and podcasts.
+(From <cite><a href="https://en.wikipedia.org/wiki/NPR">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> The New York Times </h2>
 <figure>
-<img src="img/website_TheNewYorkTimes.jpg" />
+  <a href="http://www.nytimes.com/">http://www.nytimes.com/</a>
 </figure>
+<p>
+The New York Times (sometimes abbreviated to NYT) is an American daily newspaper, founded and continuously published in New York City since September 18, 1851, by The New York Times Company. The New York Times has won 117 Pulitzer Prizes, more than any other news organization.
+The paper's print version has the second-largest circulation, behind The Wall Street Journal, and the largest circulation among the metropolitan newspapers in the United States of America. The New York Times is ranked 39th in the world by circulation. Following industry trends, its weekday circulation has fallen to fewer than one million daily since 1990.
+(From <cite><a href="https://en.wikipedia.org/wiki/The_New_York_Times">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> The New Yorker </h2>
 <figure>
-<img src="img/website_TheNewYorker.jpg" />
+  <a href="http://www.newyorker.com/">http://www.newyorker.com/</a>
 </figure>
+<p>
+The New Yorker is an American magazine of reportage, commentary, criticism, essays, fiction, satire, cartoons, and poetry. It is published by Condé Nast. Started as a weekly in 1925, the magazine is now published 47 times annually, with five of these issues covering two-week spans.
+Although its reviews and events listings often focus on the cultural life of New York City, The New Yorker has a wide audience outside of New York. It is well known for its illustrated and often topical covers, its commentaries on popular culture and eccentric Americana, its attention to modern fiction by the inclusion of short stories and literary reviews, its rigorous fact checking and copyediting, its journalism on politics and social issues, and its single-panel cartoons sprinkled throughout each issue.
+(From <cite><a href="https://en.wikipedia.org/wiki/The_New_Yorker">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> Harvard Business Review </h2>
 <figure>
-<img src="img/website_HarvardBusinessReview.png" />
+  <a href="https://hbr.org/">https://hbr.org/</a>
 </figure>
+<p>
+Harvard Business Review (HBR) is a general management magazine published by Harvard Business Publishing, a wholly owned subsidiary of Harvard University. It is published 10 times a year and is headquartered in Watertown, Massachusetts.
+HBR's articles cover a wide range of topics that are relevant to different industries, management functions, and geographic locations. These focus on such areas as leadership, organizational change, negotiation, strategy, operations, marketing, finance, and managing people.
+Harvard Business Review has been the frequent publishing home for scholars and management thinkers such as Clayton M. Christensen, Peter F. Drucker, Michael E. Porter, Rosabeth Moss Kanter, John Hagel III, Thomas H. Davenport, Gary Hamel, C.K. Prahalad, Vijay Govindarajan, Robert S. Kaplan, Rita Gunther McGrath and others. Management concepts and business terms such as Balanced scorecard, Core competence, Strategic intent, Reengineering, Globalization, Marketing myopia, and Glass ceiling were all first given prominence in HBR.
+(From <cite><a href="https://en.wikipedia.org/wiki/Harvard_Business_Review">Wikipedia</a></cite>.)
+</p>
 </section>
 
 <section>
 <h2> Malcom Gladwell </h2>
 <figure>
-<img src="img/website_MalcolmGladwell.jpg" />
+<a href="http://gladwell.com/">http://gladwell.com/</a>
 </figure>
+<p>
+Malcolm Timothy Gladwell, CM (born September 3, 1963) is an English-born Canadian journalist, bestselling author, and speaker. He has been a staff writer for The New Yorker since 1996. He has written five books, The Tipping Point: How Little Things Can Make a Big Difference (2000), Blink: The Power of Thinking Without Thinking (2005), Outliers: The Story of Success (2008), What the Dog Saw: And Other Adventures (2009), a collection of his journalism, and David and Goliath: Underdogs, Misfits, and the Art of Battling Giants (2013). All five books were on The New York Times Best Seller list.
+Gladwell's books and articles often deal with the unexpected implications of research in the social sciences and make frequent and extended use of academic work, particularly in the areas of sociology, psychology, and social psychology. Gladwell was appointed to the Order of Canada on June 30, 2011.
+(From <cite><a href="https://en.wikipedia.org/wiki/Malcolm_Gladwell">Wikipedia</a></cite>.)
+</p>
+</section>
+
+<section>
+<h2> Hacker News </h2>
+<figure>
+  <a href="https://news.ycombinator.com/">https://news.ycombinator.com/</a>
+</figure>
+<p>
+Hacker News is a social news website focusing on computer science and entrepreneurship. It is run by Paul Graham's investment fund and startup incubator, Y Combinator. In general, content that can be submitted is defined as "anything that gratifies one's intellectual curiosity".
+(From <cite><a href="https://en.wikipedia.org/wiki/Hacker_News">Wikipedia</a></cite>.)
+</p>
 </section>
