worked on movies

--- a/movies.html
+++ b/movies.html
@@ -4,8 +4,172 @@ layout: default
 
 <h1> Great Movies </h1>
 
-<ul>
-  <li> Ferris Bueller's Day Off </li>
-  <li> Invictus </li>
-  <li> Rudy </li>
-</ul>
+<section>
+<h2> Ferris Bueller's Day Off </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/R-P6p86px6U" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Ferris Bueller (Matthew Broderick) has an uncanny skill at cutting classes and getting away with it. Intending to make one last duck-out before graduation, Ferris calls in sick, "borrows" a Ferrari, and embarks on a one-day journey through the streets of Chicago. On Ferris' trail is high school principal Rooney (Jeffrey Jones), determined to catch him in the act.
+</p>
+</section>
+
+<section>
+<h2> Do the Right Thing </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/muc7xqdHudI" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+  Salvatore "Sal" Fragione (Danny Aiello) is the Italian owner of a pizzeria in Brooklyn. A neighborhood local, Buggin' Out (Giancarlo Esposito), becomes upset when he sees that the pizzeria's Wall of Fame exhibits only Italian actors. Buggin' Out believes a pizzeria in a black neighborhood should showcase black actors, but Sal disagrees. The wall becomes a symbol of racism and hate to Buggin' Out and to other people in the neighborhood, and tensions rise.
+</p>
+</section>
+
+<section>
+<h2> Malcolm X </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/sx4sEvhYeVE" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+  A tribute to the controversial black activist and leader of the struggle for black liberation. He hit bottom during his imprisonment in the '50s, he became a Black Muslim and then a leader in the Nation of Islam. His assassination in 1965 left a legacy of self-determination and racial pride.
+</p>
+</section>
+
+<section>
+  <h2> Better Luck Tomorrow </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/a4g_hIhwqaI" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+An accomplished high school student, Ben (Parry Shen) seems to excel at almost everything except winning over his dream girl, Stephanie (Karin Anna Cheung). When he begins an unlikely friendship with trouble-seeking tough guy Daric (Roger Fan), Ben becomes involved in petty crime that gets increasingly dangerous, with his various illegal ventures extending to include Stephanie and her wealthy beau, Steve (John Cho). Can these restless teens curb their criminal activities before it's too late?
+</p>
+</section>
+
+<section>
+  <h2> The Joy Luck Club </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/0nYDMp1LdT8" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+In San Francisco, a group of aging Chinese women (Kieu Chinh, Tsai Chin, France Nuyen, Lisa Lu) meet regularly to trade familial stories while playing Mahjong. In a series of sixteen vignettes that spans generations and continents, this adaptation of Amy Tan's bestselling novel explores cultural conflict and the often-turbulent relationships between four first-generation Chinese-American women (Ming-Na Wen, Tamlyn Tomita, Lauren Tom, Rosalind Chao) and their mothers.
+</p>
+</section>
+
+<section>
+  <h2> The Fast Runner </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/Ta4GCf9aA3A" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+"Atanarjuat, The Fast Runner" is an epic film made by and about the Inuit peoples of the Canadian arctic, telling a story of a crime that ruptures the trust within a closely knit group, and how justice is achieved and healing begins. Director Zacharias Kunuk and his writer, Paul Apak Angilin, collected oral versions of an Inuit legend from several elders, collated them into a story, submitted the story to the elders for suggestions and then filmed it as a collaborative expression.
+</p>
+</section>
+
+<section>
+  <h2> Frozen River </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/B5pPQdLN4mg" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+After her husband deserts her, working-class mother Ray Eddy (Melissa Leo) is in great need of money to find a home. Lured by the possibility of easy cash, Ray joins Lila (Misty Upham) a widowed Mohawk who earns a living by smuggling immigrants from Canada to the U.S. across the St. Lawrence.
+</p>
+</section>
+
+<section>
+  <h2> To Kill a Mockingbird </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/KR7loA_oziY" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Scout Finch (Mary Badham), 6,and her older brother, Jem (Phillip Alford), live in sleepy Maycomb, Ala., spending much of their time with their friend Dill (John Megna) and spying on their reclusive and mysterious neighbor, Boo Radley (Robert Duvall). When Atticus (Gregory Peck), their widowed father and a respected lawyer, defends a black man named Tom Robinson (Brock Peters) against fabricated rape charges, the trial and tangent events expose the children to evils of racism and stereotyping.
+</p>
+</section>
+
+<section>
+  <h2> Winter's Bone </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/bE_X2pDRXyY" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Faced with an unresponsive mother and a criminal father, Ozark teenager Ree Dolly (Jennifer Lawrence) does what she can to manage the household and take care of her two younger siblings. Informed by the sheriff (Garret Dillahunt) that their father put their home up for bond and then disappeared, Ree sets out on a dangerous quest to find him. Her entire family's fate now in her hands, Ree challenges her outlaw kin's code of silence and risks her life to learn her father's fate.
+</p>
+</section>
+
+<section>
+  <h2> Gattaca </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/iODNttWP61E" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Vincent Freeman (Ethan Hawke) has always fantasized about traveling into outer space, but is grounded by his status as a genetically inferior "in-valid." He decides to fight his fate by purchasing the genes of Jerome Morrow (Jude Law), a laboratory-engineered "valid." He assumes Jerome's DNA identity and joins the Gattaca space program, where he falls in love with Irene (Uma Thurman). An investigation into the death of a Gattaca officer (Gore Vidal) complicates Vincent's plans.
+</p>
+</section>
+
+<section>
+  <h2> Her </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/WzV6mXIOVl4" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+A sensitive and soulful man earns a living by writing personal letters for other people. Left heartbroken after his marriage ends, Theodore (Joaquin Phoenix) becomes fascinated with a new operating system which reportedly develops into an intuitive and unique entity in its own right. He starts the program and meets "Samantha" (Scarlett Johansson), whose bright voice reveals a sensitive, playful personality. Though "friends" initially, the relationship soon deepens into love.
+</p>
+</section>
+
+<section>
+  <h2> Rudy </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/Xm0pTMbDaMI" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Rudy Ruettiger (Sean Astin) wants to play football at the University of Notre Dame, but has neither the money for tuition nor the grades to qualify for a scholarship. Rudy redoubles his efforts to get out of the steel mill where his father works when his best friend (Christopher Reed) dies in an accident there. Overcoming his dyslexia thanks to his friend and tutor, D-Bob (Jon Favreau), Rudy gains admission to Notre Dame and begins to fight his way onto the school's fabled football team.
+</p>
+</section>
+
+<section>
+  <h2> Invictus </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/RZY8c_a_dlQ" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Following the fall of apartheid, newly elected President Nelson Mandela (Morgan Freeman) faces a South Africa that is racially and economically divided. Believing he can unite his countrymen through the universal language of sport, Mandela joins forces with Francois Pienaar (Matt Damon), captain of the rugby team, to rally South Africans behind a bid for the 1995 World Cup Championship.
+</p>
+</section>
+
+<section>
+  <h2> The Last Fishing Boat </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/QXasZgqiPSM" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+"The Last Fishing Boat", a film by Shemu Joyah, is about the clash of cultures when a white tourist makes sexual overtures to a Malawian woman who is the third wife of an illiterate but highly proud fisherman. 
+</p>
+</section>
+
+<section>
+  <h2> Ninah's Dowry </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/7sRyH0zcXn0" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Ninah is a runaway wife whose husband finds out she's pregnant and he comes to recover the dowry he paid or take home the woman he owns.
+</p>
+</section>
+
+<section>
+  <h2> Tokyo Story </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/0YZHlU8dd18" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+The elderly Shukishi (Chishu Ryu) and his wife, Tomi (Chieko Higashiyama), take the long journey from their small seaside village to visit their adult children in Tokyo. Their elder son, Koichi (Sô Yamamura), a doctor, and their daughter, Shige (Haruko Sugimura), a hairdresser, don't have much time to spend with their aged parents, and so it falls to Noriko (Setsuko Hara), the widow of their younger son who was killed in the war, to keep her in-laws company.
+</p>
+</section>
+
+<section>
+  <h2> Old Boy </h2>
+<figure>
+  <iframe width="426" height="240" src="https://www.youtube.com/embed/2HkjrJ6IK5E" frameborder="0" allowfullscreen></iframe>
+</figure>
+<p>
+Dae-Su is an obnoxious drunk bailed from the police station yet again by a friend. However, he's abducted from the street and wakes up in a cell, where he remains for the next 15 years, drugged unconscious when human contact is unavoidable, otherwise with only the television as company. And then, suddenly released, he is invited to track down his jailor with a denouement that is simply stunning.
+</p>
+</section>
