--- a/readings.html
+++ b/readings.html
@@ -2,17 +2,15 @@
 layout: default
 ---
 
-<h1> Key Readings </h1>
+# Key Readings
 
-<ul>
-  <li> Hiram Bingham Smithsonian Article </li>
-  <li> Nicolas Winton </li>
-  <li> Atul Gawande, "Failure and Rescue" </li>
-  <li> Gladwell on Adversity </li>
-  <li> Gladwell on the 10,000 hour rule </li>
-  <li> Sweating Your Way to Success </li>
-  <li> [TBD Growth Mindset Reading] </li>
-  <li> Michael Lewis, "Don't Eat Fortune's Cookie" </li>
-  <li> Chinua Achebe, "Africa is People" </li>
-  <li> Paul Farmer, (piece to come) </li>
-</ul>
+- Hiram Bingham Smithsonian Article
+- Nicolas Winton
+- Atul Gawande, "Failure and Rescue"
+- Gladwell on Adversity
+- Gladwell on the 10,000 hour rule
+- Sweating Your Way to Success
+- [TBD Growth Mindset Reading]
+- Michael Lewis, "Don't Eat Fortune's Cookie"
+- Chinua Achebe, "Africa is People"
+- Paul Farmer, (piece to come)
